# ecommerce-agent

./: .env.example  .gitignore  INSTALLATION_AND_USAGE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: faqs.json
data/faqs/: mattelsa_faqs_addi.txt  mattelsa_faqs_compras.txt  mattelsa_faqs_envios.txt
data/products/: products.json
scripts/: ingest_documents_table.py  ingest_products_table.py
src/ecommerce_agent/: config.py
src/ecommerce_agent/application/services/: base_service.py  document_service.py  products_service.py
src/ecommerce_agent/application/services/conversation_service/: generate_response.py
src/ecommerce_agent/application/services/conversation_service/workflow/: chains.py  graph.py  nodes.py  state.py  tools.py
src/ecommerce_agent/application/services/extract_service/: extract.py  loader.py  splitter.py
src/ecommerce_agent/application/services/rag/: embeddings.py  product_retriever.py  retriever.py
src/ecommerce_agent/domain/: document.py  document_retriever_input.py  product.py  prompt.py  retriever_input.py
src/ecommerce_agent/infrastructure/: api.py  logger.py
src/ecommerce_agent/infrastructure/database/postgresql/: postgres_client.py
src/ecommerce_agent/infrastructure/messaging/telegram/: telegram_bot_handler.py
